--- a/src/sass/_helpers.scss
+++ b/src/sass/_helpers.scss
@@ -12,7 +12,3 @@
     cursor: -webkit-grabbing;
     cursor: grabbing;
 }
-
-.text-center {
-    text-align: center;
-}
